# course-site

./: .gitignore  GITHUB_GUIDE.md  README.md  check_titles.py  database.db  dump.txt  dump_th.txt  dumped_th_tags.txt  git_push.py  index.html  main.py  pyproject.toml  query_db.py  ths.txt
core/: database.py
models/: __init__.py
routers/: admin.py  admin_notices.py  auth.py  public.py
scripts/: README.md  _db_lesson_55.txt  _extract_db_content.py  _section_a.py  _section_b.py  _section_c.py  _section_d.py  _section_e.py  append_basic_lessons.py  check_db.py  create_admin.py  expand_fastapi_course.py  export_site.py  fix_all_colors.py  fix_colors.py  fix_db.py  fix_table_colors.py  generate_docx.py  get_categories.py  move_image.py  organize.py  replace_terms2.py  seed_fastapi_course.py  seed_law_ultimate_pt3.py  seed_law_ultimate_pt4.py  update_all.bat
scripts/db_tools/: change_law_lesson_ids.py  cleanup_law_lessons.py  fix_law_bg.py  replace_terms.py
scripts/export_tools/: _db_lesson_55.txt  _extract_db_content.py  export_site.py  generate_docx.py  redirect_fix.py
scripts/media_tools/: create_fastapi_thumbnail.py  download_image.py
scripts/seeders/: _update_seeds.py  seed_law_ultimate_pt1.py  seed_law_ultimate_pt1_keep_id.py  seed_law_ultimate_pt2.py  seed_law_ultimate_pt2.py.new  seed_law_ultimate_pt2_fixed.py  seed_law_ultimate_pt3.py  seed_law_ultimate_pt4.py  seed_notices.py  update_fastapi_course_complete.py  update_fastapi_course_keep_id.py
scripts/templates/: _section_a.py  _section_b.py  _section_c.py  _section_d.py  _section_e.py
(+28 files in other folders)
